[package]
name = "glopy"
version = "0.2.0"
authors = ["Nguyen Duc Toan <ntoan96@gmail.com>"]
license = "MIT"
homepage = "https://github.com/ndtoan96/glopy"
repository = "https://github.com/ndtoan96/glopy"
readme = "README.md"
keywords = ["cli", "copy", "glob", "pattern"]
categories = ["command-line-utilities"]
description = "A cross-platform tool to copy files using glob patterns"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
globset = "0.4.9"
structopt = "0.3.26"
walkdir = "2.3.2"
